syntax = "proto3";

package demo;

import "google/protobuf/timestamp.proto";

message User {
  uint64 id = 1;
  string name = 2;
  string phone = 3;
  string email = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
 }

message GetUserReq {
  uint64 id = 1;
}

message CreateUserReq {
  string name = 1;
  string phone = 2;
  string email = 3;
}

service UserService {
  rpc GetUser(GetUserReq) returns (User);
  rpc CreateUser(CreateUserReq) returns (User);
}
